--- a/Exercises/2/package.json
+++ b/Exercises/2/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node .\\http\\server\\index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "eitzhak",
   "license": "ISC",
   "dependencies": {
-    "moment": "^2.24.0"
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "njwt": "^1.0.0"
   }
 }
